robot  Adding: [[an:Mark Twain]]

--- a/مارک_ټوېن.mw
+++ b/مارک_ټوېن.mw
@@ -4,75 +4,75 @@
 د یو شتمن سوداګر له لور اولیوه لنګدن سره یې واده وکړ. د ۱۸۵۷ او ۱۸۹۴ کلونو ترمنځ شل کاله تر ټولو شتمن او خوښ لیکوال او پدې موده کې یې ښه کتابونه هم ولیکل. خو د ۱۸۹۰ لسیزې په نیمايي کې پرې تنګڅه راغله، او د عمر وروستي پنځلس کلونه یې له ګڼ شمېر ستونزو او جدي کتابونو له لیکلو سره تېر کړل. 
 د هغه په آثارو کې د طلايي وخت، د تام سایر پېښې، بشرڅه دی؟ شکمن بېګانه، او په میسي سي سي پي ژوند ته اشاره کولای شو.
 
-
 [[am:ማርክ ትዌይን]]
+[[an:Mark Twain]]
 [[ar:مارك توين]]
 [[az:Mark Tven]]
-[[bn:মার্ক টোয়েইন]]
-[[zh-min-nan:Mark Twain]]
-[[bs:Mark Twain]]
-[[br:Mark Twain]]
+[[bat-smg:Mark Twain]]
 [[bg:Марк Твен]]
+[[bn:মার্ক টোয়েইন]]
+[[br:Mark Twain]]
+[[bs:Mark Twain]]
 [[ca:Mark Twain]]
 [[cs:Mark Twain]]
 [[cy:Mark Twain]]
 [[da:Mark Twain]]
 [[de:Mark Twain]]
-[[en:Mark Twain]]
-[[et:Mark Twain]]
 [[el:Μαρκ Τουαίην]]
-[[es:Mark Twain]]
+[[en:Mark Twain]]
 [[eo:Mark Twain]]
+[[es:Mark Twain]]
+[[et:Mark Twain]]
 [[eu:Mark Twain]]
 [[fa:مارک تواین]]
+[[fi:Mark Twain]]
 [[fr:Mark Twain]]
 [[ga:Mark Twain]]
 [[gl:Mark Twain]]
 [[gu:માર્ક ટ્વેઇન]]
-[[ko:마크 트웨인]]
+[[he:מארק טוויין]]
 [[hi:मार्क ट्वैन]]
 [[hr:Mark Twain]]
-[[io:Mark Twain]]
+[[hu:Mark Twain]]
 [[id:Mark Twain]]
+[[io:Mark Twain]]
 [[is:Mark Twain]]
 [[it:Mark Twain]]
-[[he:מארק טוויין]]
-[[ka:მარკ ტვენი]]
-[[sw:Mark Twain]]
-[[la:Mark Twain]]
-[[lt:Mark Twain]]
-[[lij:Mark Twain]]
+[[ja:マーク・トウェイン]]
 [[jbo:Mark Twain]]
-[[hu:Mark Twain]]
+[[ka:მარკ ტვენი]]
+[[ko:마크 트웨인]]
+[[la:Mark Twain]]
+[[lij:Mark Twain]]
+[[lt:Mark Twain]]
 [[ml:മാര്‍ക് ട്വയിന്‍]]
+[[mn:Марк Твен]]
 [[mr:मार्क ट्वेन]]
 [[ms:Mark Twain]]
-[[mn:Марк Твен]]
 [[nl:Mark Twain]]
-[[ja:マーク・トウェイン]]
-[[no:Mark Twain]]
 [[nn:Mark Twain]]
+[[no:Mark Twain]]
 [[oc:Mark Twain]]
-[[uz:Mark Twain]]
 [[pl:Mark Twain]]
 [[pt:Mark Twain]]
 [[ro:Mark Twain]]
 [[ru:Марк Твен]]
+[[sh:Mark Twain]]
 [[simple:Mark Twain]]
 [[sk:Mark Twain]]
 [[sl:Mark Twain]]
 [[sr:Марк Твен]]
-[[sh:Mark Twain]]
-[[fi:Mark Twain]]
-[[szl:Mark Twain]]
 [[sv:Mark Twain]]
+[[sw:Mark Twain]]
+[[szl:Mark Twain]]
 [[ta:மார்க் டுவெய்ன்]]
-[[th:มาร์ก ทเวน]]
-[[vi:Mark Twain]]
 [[tg:Марк Твейн]]
+[[th:มาร์ก ทเวน]]
 [[tr:Mark Twain]]
 [[uk:Марк Твен]]
+[[uz:Mark Twain]]
+[[vi:Mark Twain]]
 [[vo:Mark Twain]]
 [[yo:Mark Twain]]
-[[bat-smg:Mark Twain]]
 [[zh:马克·吐温]]
+[[zh-min-nan:Mark Twain]]
