*Empty MediaWiki Message*

--- a/بڼ_پالنه.mw
+++ b/بڼ_پالنه.mw
@@ -1,6 +1,6 @@
-[[Image:gardening.jpg|thumb|left|200px|A gardener]]
+[[انځور:gardening.jpg|thumb|left|200px|يو بڼ پالونکی]]
 {{Portal}}
-'''Gardening''' is the practice of growing flowering [[plant]]s, [[vegetable]]s, and [[fruit]]s. [[Residential garden|Residential gardening]] most often takes place in or about a residence, in a space referred to as the '''[[garden]]'''. Although a garden typically is located on the land near a residence, it may also be located in a [[roof garden|roof]], in an [[Atrium (architecture)|atrium]], on a [[balcony]], in a [[windowbox]], or on a [[patio garden|patio]] or [[vivarium]].
+'''بڼ پالنه''' د بوټو، سبو، ميوو او د ګلانو د کرهڼې او ساتنې کړنه ده. ډېری خلک په خپلو استوګنځايونو کې دننه او يا هم خپلو استوګنځايونو ته څېرمه د خپلو مېنو د ښکلو کولو او يا هم د ګڼو نورو ګټو په خاطر ځانونو ته بڼونه جوړوي. که څه هم چې بڼ په عام ډول هغې زمکې ته اشاره کوي چې د خلکو د استوګنې ځای ته نژدې د ښېرازه بوټو يو پالنځی وي.
 
 Gardening also takes place in non-residential green areas, such as [[park]]s, public or semi-public gardens ([[botanical garden]]s or [[zoological garden]]s), [[amusement park|amusement]] and [[theme park]]s, along transportation corridors, and around [[tourism|tourist attractions]] and [[garden hotels|hotels]]. In these situations, a staff of [[gardener]]s or [[groundskeeper]]s maintains the gardens.
 
