*Empty MediaWiki Message*

--- a/بڼ_پالنه.mw
+++ b/بڼ_پالنه.mw
@@ -1,14 +1,8 @@
 [[انځور:gardening.jpg|thumb|left|200px|يو بڼ پالونکی]]
 {{Portal}}
-'''بڼ پالنه''' د بوټو، سبو، ميوو او د ګلانو د کرهڼې او ساتنې کړنه ده. ډېری خلک په خپلو استوګنځايونو کې دننه او يا هم خپلو استوګنځايونو ته څېرمه د خپلو مېنو د ښکلو کولو او يا هم د ګڼو نورو ګټو په خاطر ځانونو ته بڼونه جوړوي. که څه هم چې بڼ په عام ډول هغې زمکې ته اشاره کوي چې د خلکو د استوګنې ځای ته نژدې د ښېرازه بوټو يو پالنځی وي.
+'''بڼ پالنه''' يوه عامه انساني مشغولا ده چې د خوړلو او يا هم د چاپيريال د ښکلا په موخه د بوټو، ميوو او ګلانو کرهڼه او ساتنه ترسره کېږي. ډېری خلک په خپلو استوګنځايونو کې دننه او يا هم خپلو استوګنځايونو ته څېرمه د خپلو مېنو د ښکلو کولو او يا هم د ګڼو نورو ګټو په خاطر ځانونو ته بڼونه جوړوي. که څه هم چې بڼ په عام ډول هغې زمکې ته اشاره کوي چې د خلکو د استوګنې ځای ته نژدې د ښېرازه بوټو يو پالنځی وي.
 
-Gardening also takes place in non-residential green areas, such as [[park]]s, public or semi-public gardens ([[botanical garden]]s or [[zoological garden]]s), [[amusement park|amusement]] and [[theme park]]s, along transportation corridors, and around [[tourism|tourist attractions]] and [[garden hotels|hotels]]. In these situations, a staff of [[gardener]]s or [[groundskeeper]]s maintains the gardens.
-
-'''Indoor gardening''' is concerned with the growing of [[houseplant]]s within a residence or building, in a [[conservatory (greenhouse)|conservatory]], or in a [[greenhouse]]. [[Indoor garden]]s are sometimes incorporated as part of [[air conditioning]] or [[heating]] systems.
-
-'''[[Water garden]]ing''' is concerned with growing plants adapted to pools and [[pond]]s. [[Bog]] gardens are also considered a type of water garden. These all require special conditions and considerations. A simple water garden may consist solely of a tub containing the [[water]] and plant(s).
-
-'''[[Container garden]]ing''' is concerned with growing plants in any type of container either indoors or outdoors.  Common containers are pots, hanging baskets, and planters. Container gardening is usually used in atriums and on balconies, patios, and roof tops.
+خلک د بېلابېلو موخو لپاره بڼونه جوړوي چې په دغو کې د مېوو او دانو د بڼونو نه نيولې تر بېلابېلو بوټو او ګلانو پورې او يا هم د ځانګړو دارو درملو د ترلاسه کولو پخاطر بڼونه پالل کېږي. بڼ پالنه يو ډېر فعاله دنده ده او د ښه ثمر لپاره ډېر زيار او زحمت غواړي. د دې لپاره چې يو بڼ ښېرازه او زرغون وي نو د بڼ ساتونکي ته پکار ده چې د خپل د بڼ د بوټو او ونو څارنه پر وخت سره وکړي د بڼ بوټو او ونو د غړوبولو او سرې ورکولو کړنو سره د بڼ سمه ساتنه وکړي. بڼ پالنه د بزګرۍ او ځنګل پالنې سره توپير لري.
 
 ==بڼ پالنه د فارم جوړونې په پرتله==
 
