*Empty MediaWiki Message*

--- a/اېمل_پسرلی.mw
+++ b/اېمل_پسرلی.mw
@@ -1,4 +1,10 @@
-ايمل پسرلی په کندز کې زيږيدلی دی . وړکتون يې په کندز کې او لومړني دوه ټولګې يې په کابل کې لوستي دي . دۀ د پېښور له پوهنتونه د لسانس سند اخيستی دی . د نوې مېډيا په نامۀ يې نورې زده کړي د انګلستان په لندن کې بشپړې کړي دي .
+ايمل پسرلی يو افغان ليکوال او خبريال دی. نوموړی په پښتو ژبه ليکوالي کوي او همدا راز د لنډو کيسو څو کتابونه يې چاپ شوي دي. د ليکوالۍ تر څنګ د بي بي سي د پښتو څانګې خبريال او وياند هم پاتې شوی. 
+
+== مخينه ==
+ايمل پسرلی د افغانستان په کندز ولايت کې زيږيدلی دی. نوموړی د پښتون شاعر او اديب محمد صديق پسرلي زوی، د پښتنو کيسه ليکوالو اسد الله غضنفر، عصمت الله څاروان او د اجمل پسرلي ورور دی. 
+
+== زده کړې ==
+د وړکتون دور يې په کندز کې تېر کړی او لومړني دوه ټولګې يې په کابل کې لوستي دي. دۀ د پېښور له پوهنتونه د لسانس سند اخيستی دی . د نوې مېډيا په نامۀ يې نورې زده کړي د انګلستان په لندن کې بشپړې کړي دي .
 ايمل پسرلي د ١٩٩٤ کال څخه تر ١٩٩٦ کال پورې له لندن څخه په پښتو ژبه د ډيوې مياشتنۍ مجله خپروله .
 اوس هم په لندن کې ژوند کوي او له بي بي سي راديو سره په کار بوخت دی .
 ايمل پسرلي ډيرې لنډې کيسې ليکلي دي . خو يو ناول او د ډرامو يوه ټولګه يې هم خپره شوې ده .
