*Empty MediaWiki Message*

--- a/اېمل_پسرلی.mw
+++ b/اېمل_پسرلی.mw
@@ -1,4 +1,4 @@
-ايمل پسرلی يو افغان ليکوال او خبريال دی. نوموړی په پښتو ژبه ليکوالي کوي او همدا راز د لنډو کيسو څو کتابونه يې چاپ شوي دي. د ليکوالۍ تر څنګ د بي بي سي د پښتو څانګې خبريال او وياند هم پاتې شوی. 
+'''ايمل پسرلی''' يو افغان ليکوال او خبريال دی. نوموړی په پښتو ژبه ليکوالي کوي او همدا راز د لنډو کيسو څو کتابونه يې چاپ شوي دي. د ليکوالۍ تر څنګ د بي بي سي د پښتو څانګې خبريال او وياند هم پاتې شوی. 
 
 == مخينه ==
 ايمل پسرلی د افغانستان په کندز ولايت کې زيږيدلی دی. نوموړی د پښتون شاعر او اديب محمد صديق پسرلي زوی، د پښتنو کيسه ليکوالو اسد الله غضنفر، عصمت الله څاروان او د اجمل پسرلي ورور دی. 
