--- a/اېمل_پسرلی.mw
+++ b/اېمل_پسرلی.mw
@@ -5,14 +5,21 @@
 
 == زده کړې ==
 د وړکتون دور يې په کندز کې تېر کړی او لومړني دوه ټولګې يې په کابل کې لوستي دي. دۀ د پېښور له پوهنتونه د لسانس سند اخيستی دی . د نوې مېډيا په نامۀ يې نورې زده کړي د انګلستان په لندن کې بشپړې کړي دي .
-ايمل پسرلي د ١٩٩٤ کال څخه تر ١٩٩٦ کال پورې له لندن څخه په پښتو ژبه د ډيوې مياشتنۍ مجله خپروله .
+
+== دندې ==
 اوس هم په لندن کې ژوند کوي او له بي بي سي راديو سره په کار بوخت دی .
-ايمل پسرلي ډيرې لنډې کيسې ليکلي دي . خو يو ناول او د ډرامو يوه ټولګه يې هم خپره شوې ده .
+
+== ادبي کارونه ==
+ايمل پسرلي د ١٩٩٤ کال څخه تر ١٩٩٦ کال پورې له لندن څخه په پښتو ژبه د ډيوې مياشتنۍ مجله خپروله .ايمل پسرلي ډيرې لنډې کيسې ليکلي دي . خو يو ناول او د ډرامو يوه ټولګه يې هم خپره شوې ده .
+
+== چاپ شوي آثار ==
 د دۀ د چاپ شويو کتابونه نومونه په دې ډول دي :
 څلورمه لار ، د لنډو کيسو ټولګه
 بې ځالې مرغۀ ، ناول
 ډالري معاش ، د ډرامو ټولګه
 يو مزل دوه نړۍ ، د لنډو کيسو ټولګه
+
+== ناچاپه آثار ==
 
 
 
@@ -22,3 +29,4 @@
 
 [[وېشنيزه:پښتانه ليکوالان]]
 [[وېشنيزه:پښتانه]]
+[[وېشنيزه:پښتانه خبريالان]]
