--- a/محمد_ابراهيم_خواخوږى.mw
+++ b/محمد_ابراهيم_خواخوږى.mw
@@ -7,7 +7,7 @@
 استاد خواخوږي له شعر و شاعرۍ سره مينه درلوده، همدغې مينې د شعر پر سيند ورګډ كړ، چې لومړنى شعر په ۱۹۳۴م كال د كندهار  په طلوع افغان ورځپاڼه كې خپور شو. خواږخوږى د خپلو دندو د لړ په بهير كې په 1946م كال د كندهار د كوكران د ليليې ښوونځي د ښوونكي او تدريسي امر په حيث وټاكل شو. چې بيا وروسته په ۱۹۴۸م كال د كندهار د احمدشاه بابا ليسې د مدير په حيث مقرر شو.
 
 == سياسي فعاليتونه ==
-استاد خواخوږي سياست هم كړى چې په دغه لړ كې يې د ويښ زلميانو د سياسي تحريك له پيل څخه په سياسي مبارزه كې فعال ګډون درلود، د ده د سياسي څېرې په اړه ښاغلى زرملوال وايي: ”تر ټولو دمخه دغو كسانو د ويښ زلميانو تحريك پيل كړ. له كندهار او فراه څخه پوهاند عبدالحى حبيبي، استاد عبدالروف بېنوا، محروم فيض محمد انګار، مرحوم محمد رسول خان پښتون، پوهاند عبدالشكور رشاد، استاد محمد ابراهيم خواخوږي او مرحوم عبدالرزاق فراهي.
+استاد خواخوږي سياست هم كړى چې په دغه لړ كې يې د [[ويښ زلميان|ويښ زلميانو]] د سياسي تحريك له پيل څخه په سياسي مبارزه كې فعال ګډون درلود، د ده د سياسي څېرې په اړه ښاغلى زرملوال وايي: ”تر ټولو دمخه دغو كسانو د ويښ زلميانو تحريك پيل كړ. له كندهار او فراه څخه پوهاند عبدالحى حبيبي، استاد عبدالروف بېنوا، محروم فيض محمد انګار، مرحوم محمد رسول خان پښتون، پوهاند عبدالشكور رشاد، استاد محمد ابراهيم خواخوږي او مرحوم عبدالرزاق فراهي.
 
 له ننګرهار څخه استاد ګل پاچا الفت، استاد قيام الدين خادم، پوهاند صديق الله رښتين او مرحوم غلام حسن خان ساپي، له غزني نور محمد تره كي. له پكتيا څخه ښاغلي نېك محمد پكتياني او ښاغلى غلام محى الدين زرملوال چې هغه وخت يې تخلص روښان و.
 
