--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -7,10 +7,10 @@
 لومړنۍ زده کړې يې پخپل کور کې د خپلو والدينو څخه تر سره کړي دي . خادم صاحب د اسلامي علومو ګڼ شمير کتابونه لوستي وه؛ هغه صرف ،نحوه ،منطق حکمت ،فقه ،حديث ، تفسير او د نور دوديزو علومو زده کړه يې ترلاسه کړې وه. هغه د ديني پوهې د ترلاسه کولو لپاره 15 کاله په هيواد کې دننه او له هيواد نه دباندې سفرونه کړي دي .
 
 == دندې ==
-ارواښاد خادم صاحب دلومړي ځل لپاره په ۱۳۰۴ ل. کال د کامې په ابتدائيه ښونځي کې د ښوونکي په توگه په دندې وگمارل شو. وروسته له يو څه مودې هغه هند ته سفر وکړ له سفر نه د بېرته راستنېدو سره يې د جلال آباد په يوه ښوونځي کې ښوونکی شو.
+قيام الدين خادم په بېلابېلو دولتي دندو گمارل شوی دی او د هېواد په بېلابېلو ولايتونو کې يې دندې ترسره کړي دي. نوموړي د لومړي ځل لپاره په ۱۳۰۴ ل. کال د کامې په ابتدائيه ښونځي کې د ښوونکي په توگه په دنده وگمارل شو. وروسته له يو څه مودې هغه [[هندوستان]] ته سفر وکړ له سفر نه د بېرته راستنېدو سره يې د جلال آباد په يوه ښوونځي کې د ښوونکي په توګه په کار پېل وکړ.
 
-خادم صاحب په ۱۳۱۲ ل. کال د لواړگي نه د کندهار ولايت ته ولاړ او هلته د کندهار د پښتو ادبي انجمن د غړي په توگه يې په کار پيل وکړ. په ۱۳۱۴ ل. کال د زمري مياشتې په ۲۵مه نېټه د هغه وخت د دولتي اړونده چارواکو په امر او دستور د پښتو ادبي انجمن له کندهار څخه کابل ته ولېږدېده، چي په ۱۳۱۵ ل. کال دغه انجمن په [[پښتو ټولنه]] ونومول شو. خادم صاحب ۳ مياشتې د زيري د ورځپاڼې د خپراوي پازه پر غاړه واخيستله. په ۱۳۱۸ ل. کال د تاليف او ترجمي د څانګې مدير وټاکلی شو، په ۱۳۲۰ ل. کال د پښتو ټولنې د عمومي رياست مرستيال او په ۱۳۲۱ ل. کال د اتحاد مشرقي مدير او په ۱۳۲۴ ل. کال د دايرة المعارف د ژباړې مدير مقرر شو. په ۱۳۲۵ ل. کال کې د تعاوني ډيپو د تفتيش لوی مدير وټاکل شو چې څه وخت وروسته د هرات ولايت ته ولېږل شو. په ۱۳۲۹ ل. کال د کندهار د طلوع افغان مدير په توګه يې دنده ترسره کړه. په ۱۳۳۰ ل. کال د کابل مجلې د چلوونکي دنده ور په غاړه وه او په ۱۳۳۱ ل. کال د سروبي د برېښنا د فابريکې د کوپراتيف لوي مدير وټاکل شو.
-په ۱۳۳۲ ل. کال خادم صاحب د اصلاح ورځپاڼې د مسؤل مدير په حيث په کار پېل وکړ. خادم صاحب په بېلابېلو دولتي دندو گمارل شوی دی او د هېواد په بېلابېلو ولايتونو کې يې دندې ترسره کړي دي د بيلگې په توگه د اصلاح ورځپاڼې د مدريت د دندې وروسته هغه څو کاله د پښتو ژبې د کورسونو مدير او په عين وخت کې د زيري ورځپاڼې د چلوونکي دنده هم پر غاړه درلوده. 
+نوموړی په ۱۳۱۲ ل. کال د لواړګي نه [[د کندهار ولايت]] ته ولاړ او هلته د کندهار [[د پښتو ادبي انجمن]] غړي شو. کله چې د ۱۳۱۴ ل. کال د زمري په ۲۵مه نېټه د هغه مهال د دولتي چارواکو په امر د پښتو ادبي انجمن له کندهار څخه کابل ته ولېږدېده نو قيام الدين خادم هم د همدغې ټولنې سره کابل ته وکوچېده. په ۱۳۱۵ ل. کال کې د پښتو ادبي انجمن نوم په رسمي توګه په [[پښتو ټولنه]] بدل شو. په کابل کې د اوسېدو پر مهال، هغه ۳ مياشتې د زيري د ورځپاڼې د خپراوي پازه پر غاړه درلودله. په ۱۳۱۸ ل. کال کې، ښاغلی خادم د تاليف او ترجمي د څانګې مدير وټاکل شو، په ۱۳۲۰ ل. کال کې يې د [[پښتو ټولنه|پښتو ټولنې]] د عمومي رياست مرستيالي پرمخ بېوله او په ۱۳۲۱ ل. کال کې د [[اتحاد مشرقي]] د ورځپاڼې مدير شو. تر دې وروسته په ۱۳۲۴ ل. کال کې د دايرة المعارف د ژباړې مديريت ورپه غاړه شو او بيا په ۱۳۲۵ ل. کال کې د تعاوني ډيپو د پلټنې (تفتيش) لوی مدير شو چې تر دې څه موده وروسته بيا [[د هرات ولايت]] ته ولاړ. په ۱۳۲۹ ل. کال کې يو ځل بيا قيام الدين خادم ته په رسنيو کې دنده ورکړل شوه او دا ځل يې د کندهار د طلوع افغان د مدير په توګه خپلې چارې پرمخ بېولې او يو کال تر يوه کاله پورې همالته په کندهار کې وه بيا په ۱۳۳۰ ل. کال کې [[د کابل مجله|د کابل مجلې]] د چلوونکی شو خو دلته هم د لنډ مهال لپاره په کار بوخت وه او په ۱۳۳۱ ل. کال کې بيا د [[سروبي]] د برېښنا د فابريکې د کوپراتيف لوي مدير شو.
+په ۱۳۳۲ ل. کال کې قيام الدين خادم [[د اصلاح ورځپاڼې]] د مسؤل مدير په توګه بيا رسنيز کار ته مخه کړه او د مدريت د دندې وروسته هغه څو کاله د پښتو ژبې د کورسونو مدير او په عين وخت کې [[د زيري ورځپاڼې]] د چلوونکي دنده هم پر غاړه درلوده.
 
 == چاپ شوي آثار ==
 ارواښاد استاد خادم د منظومو او منثورو آثارو ډير په زړه پوري کتابونه ليکلي او ۱۴ ځانگړي اثار يي چاپ شوي دي چې د هغو نه يې يو شمير په دې توګه دي:
