/* هغه مذهبونه چې د اسلام پر بنسټ جوړ شوي */

--- a/اسلام.mw
+++ b/اسلام.mw
@@ -559,7 +559,7 @@ Islamic [[Holiday|holy days]] fall on fixed dates of the lunar calendar, which m
 
 ==اسلام او نور دينونه==
 ====هغه مذهبونه چې د اسلام پر بنسټ جوړ شوي====
-{{main|Islam and other religions}}
+{{main|اسلام او نور دينونه}}
 
 دا لانديني مذهبونو لارويان ځانونه مسلمانان بولي، خو د ډېرو مسلمانانو او مسلمانو چارواکو لخوا دوی مسلمانان نه بلل کېږي:
 * [[د اسلام ملت]] (په امريکا کې بنسټ شوې مذهبي ډله)
