--- a/حبيب_الله_زړه_سواند.mw
+++ b/حبيب_الله_زړه_سواند.mw
@@ -24,7 +24,19 @@
 #زه چې ماشوم وم لنډه کيسه
 #ګل شو پاڼې پاڼې د څلوريځو ټولګه
 
-
+== د شعر يوه بېلګه ==
+<center>زموږ د کلي لارې{{شعر}}
+{{ب|په سرو وينو تکې سرې دي اوس زموږ د کلي لارې|بې ملنګه هديرې دي اوس زموږ د کلي لارې}}
+{{ب|ته له ما نه پکې ورک شوې، زه له تا نه پکې ورک شوم|خونړۍ غوندې تيارې دي اوس زموږ د کلي لارې}}
+{{ب|تېروو راتېروو پرې جنازې د ځوانيمرګو|بوله جوړې تاترې دي اوس زموږ د کلي لارې}}
+{{ب|زه درتلی نه شمه تا ته، ته راتلی نه شې اوس ما ته|د سرونو خطرې دي اوس زموږ د کلي لارې}}
+{{ب|ټپي کېږي پکې زړونه او قتلېږي پکې مينې|غم لړلې نندارې دي اوس زموږ د کلي لارې}}
+{{ب|د پردو غېږ کې لوی شوي د پردو پسې روان دي|دا په څه خورې ورې دي اوس زموږ د کلي لارې}}
+{{ب|څو يزيدو قاتلانو د مينونو کروندې کړې|د مرګونو منظرې دي اوس زموږ د کلي لارې}}
+{{ب|سوې ساندې ډېرې ډېرې خو سندرې پکې نه اورو|د غمونو خاطرې دي اوس زموږ د کلي لارې}}
+{{ب|خاطرې نورې '''''زړه سوانده''''' چې نه ځي او نه راځي پرې|ځکه شاړې او سپېرې دي اوس زموږ د کلي لارې}}
+{{د شعر پای}}
+</center>
 [[وېشنيزه:پښتانه شاعران]]
 [[وېشنيزه:پښتانه ليکوالان]]
 [[وېشنيزه:پښتانه]]
