--- a/نور_هېوادونه.mw
+++ b/نور_هېوادونه.mw
@@ -159,7 +159,7 @@ In the [[Annex to the list of countries|Annex]], an outline is given on the enti
 === ح ===
 
 === خ ===
-*{{flagicon|Macau}} [[Macau]] - Macau Special Administrative Region of the People's Republic of China (''[[Special Administrative Region|special administrative region]] of the [[#C|People's Republic of China]], diplomatically known as [[Politics_of_Macau#Foreign_Affairs|Macau, China]]'')
+*{{flagicon|Macau}} [[Macau]] - Macau Special Administrative Region of the People's (''[[Special Administrative Region|special administrative region]] of the [[#C|People's Republic of China]], diplomatically known as [[Politics_of_Macau#Foreign_Affairs|Macau, China]]'')
 
 === د ===
 *{{flagicon|Nagorno-Karabakh}} '''''[[Nagorno-Karabakh]]''''' - Nagorno-Karabakh Republic (''de facto independent state inside [[#A|Azerbaijan]])
