/* د شعر يوه بېلګه */

--- a/سعدالدين_شپون.mw
+++ b/سعدالدين_شپون.mw
@@ -17,27 +17,27 @@
 {{شعر}}
 {{ب|د ګـلـو به محــشــر وه خو کـه ورېځــې لـږ سخــي وای|کــه ستا د ټيکــري پيڅکی وای زما به هم مستـــي وای}}
 {{ب|د تــا د لاس ســـابـــه وای چـې بـې تـبـې مـې خـوړلی|د تــا د مينــې اور وای مــورې زه ورکــې ستــي وای}}
-{{ب|مــاښــام مــې د کــټــوۍ نـه د شــودو څـوکـې څـټلی|سـهـار مې د مټکـۍ پـه ترشخــون کـوچـو سبنــاري وای}}
-{{ب|دردونــــه کـــړاوونــــه مــې کــرۍ ورځــې ګـاللـی|خـو شپـــه ستـــا په زنګون مې سرکېښـوای دلازاري وای}}
-{{ب|نه پوهې، نه قلم وای نه مکـــتب، نه ليک او لـوست وای|تا لاس په سر راکښلی ما خپل زړه درته سپړلی}}
+{{ب|مــاښــام مــې د کــټــوۍ نـه د شــودو څـوکـې څـټلی|سـهـار مې د مټـۍ پـه ترشخــون کـوچـو سبنــاري وای}}
+{{ب|دردونــــه کـــړاوونــــه مــې کــرۍ ورځــې ګـاللـی|خـو شپـــه ستـــا په زنګون مې سرکېښـوی دلازاري وای}}
+{{ب|نه پوهه، نه قلم وای نه مکـــتب، نه ليک او لـوست وای|تا لاس په سر راښکلی ما خپل زړه درته سکښتلی}}
 {{ب|ســـړه د ژمي شپـــه وای د نغري خوږلن ته ناســـت وای|په ورو ورو په مزو دې افسانې راته کولای}}
 {{ب|په ونو په اغزو مـې مخ او پښـــې زخمـــي زخمـــي وای|د تا په جادوګرو ګوتو ټولې رغېدلای}}
-{{ب|ديـــوان وای ښاپېـــرۍ وای ملـــوکـــه وای بدرو وای|د تا د ښکلي غږ نه د اسرار زوږ راتللای}}
+{{ب|ديـــوان وای ښاپېـــرۍ وای او ملـــوکـــه او بدرۍ وای|د تا د ښکلي غږ نه د اثارو غږ راتللای}}
+{{ب|ای مورې زړې مورې ما خو نه وليدې مورې|ته لاړې درنه پاتې شو تنها ستا نازولی}}
+{{ب|اي مورې دُنيا اور وه زه او ته ترې خبر نه وو|اوس ګرځم کړېدلی، اسکېرلی او ترټلی}}
+{{ب|چې ساه دې ورکوله زما نوم دې يادولو|تا وې چې آخري ديدن د ځوی شو رانه پاتې}}
+{{ب|ادې خو مجبوري وه، بې دردي وه بې واکي وه|دې سره ښامار په ډېرو کړې ښايسته مېنې ميراتې}}
 {{ب|زه لاړم چې د سره ښامــار عـــلاج چېـــرته پېـــدا کړم|زه لاړم چې په ټوله دُنيا وکړم ننواتی}}
 {{ب|دنيا ته ګرېوان وشلوم بېلګـې ورتـــه ښکـــاره کـــړم|دا داړې د ښامار دي نه شکرې نه نباتې}}
 {{ب|که زه ئې درنه ګــوډ کـــړم او زما ســـره يو نشـــوې|قسم په ذوالجلال دی که به يو شی ورنه پاتې}}
-{{ب|ای خلقه سره ښامـــار ته خړکـــی افغـــان پېـــدا دی|تاريخ کې دي راغلي چې به روس خوري دلته ماتی}}
-{{ب|ادې! يو نيـــم مليـــون مـــې په وطن کې شهيــدان دي|په هر کاله کې وير دی او په هر کلي کې ساندې}}
-{{ب|مليون شپږ شلې نه دي چې په ګوتو شي شمارلی|يو نيم مليون لس لکهه دي پنځه لکهه پرې باندې}}
-{{ب|يو نيم مليون خاټول که د بقوا په دشته شنه شي|دا ډاګ به شين چکن شي زرغونه رڼا به کاندي}}
-{{ب|ای مورې زړې مورې ما خو نه وليدې مورې|ته لاړې درنه پاتې شو بېکس ستا نازولی}}
-{{ب|اي مورې دُنيا اور وه زه دې پرېښودم يوازې|اوس ګرځم اسکېرلی، کړېدلی او ترټلی}}
+{{ب|ای خلقه سره ښامـــار ته خړکـــی افغـــان ولاړ دی|تاريخ کې دي راغلي چې غليم خوري دلته ماتی}}
 {{ب|ای مورې په زړه پورې ای درنې پښتنې مورې|د تا د جنازې کټ نورو يوړو هديرې ته}}
 {{ب|خبر شوم چې بمونو مو کوډل کړل دړې وړې|او تا پناه وروړې وه د بل کلي دېرې ته}}
 {{ب|خبر شوم چې زما فوټو دې هر چا ته ښودلې|ځوی ګی مې راروان دی خلقه دې بلې پېرې ته}}
 {{ب|د کلي خلقو وېل چې ده بوډۍ لېونۍ شوې|رڼا ته تور تم وايي سپين سبا تورې تيارې ته}}
-{{ب|چې ساه دې ورکوله زما نوم دې يادولو|تا وې چې آخري ديدن د ځوی شو رانه پاتې}}
-{{ب|ادې خو مجبوري وه، بې دردي وه بې واقي وه|دې سره ښامار په ډېرو کړې ښايسته مېنې ميراتې}}
+{{ب|ادې! يو نيـــم مليـــون مـــې په وطن کې شهيــدان شول|په هر کاله کې وير دی او په هر کلي کې ساندې}}
+{{ب|مليون شپږ شلې نه دي چې په ګوتو شي شمارلی|يو نيم مليون لس لکهه دي پنځه لکهه پرې باندې}}
+{{ب|يو نيم مليون خاټول که د بقوا په دشته شنه شي|دا ډاګ به شين چکن شي زرغونه رڼا به کاندي}}
 {{ب|ما وې د تا په قبر به ډيوې روښانومه|ما وې چې دا ببر سر به په شنختې درته ږدمه}}
 {{ب|ما وې چې ستا کفن به په تودو اوښکو پرېولمه|ما وې چې د جمعې شپه ستا مزار کې تېرومه}}
 {{ب|ما وې ستا د جامو سره د زړه خواله کومه|چې تا قدم پرې ايښی وي هغه ځای ښکلومه}}
