--- a/سعدالدين_شپون.mw
+++ b/سعدالدين_شپون.mw
@@ -6,11 +6,12 @@
 د ښاغلي شپون له لوری د کندز د خان اباد سيمې انځورونه ښايي په اوسني پښتو داستاني اثارو کې بې جوړې وي .
 
 == چاپي آثار ==
-دوی تر اوسه درې ناولونه شين ټاغی ، ګټيالی او د سمڅې ياران او د لنډو کيسو يوه ټولګه د بنګي غاړه خپره کړې ده.
-
-استاد ګڼې نورې لنډې کيسې هم ليکلي دي .
-
-استاد شپون څه باندې اووه لسيزې پخوا د افغانستان د کندز په ولايت کې زيږيدلى دى . دوى په دې وروستيو کې خپل ژوند ليک هم خپور کړ چې (( وو نه وو يو شپون وو )) نوميږي .
+د سعدالدين شپون ليکلي کتابونه په دې ډول دي:
+#و نه و يو شپون و
+#شين ټاغی
+#ګټيالی
+#د سمڅې ياران
+#د بنګي غاړه
 
 == د شعر يوه بېلګه ==
 <center>'''مور '''
