--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -279,10 +279,10 @@ Fundamental to the structure of the universe is the existence of [[dark matter]]
 
 == ناڅانګواله ستورپوهنه ==
 {{main|ناڅانګواله ستورپوهنه}}
-[[انځور:Telescope trailer 22.jpg|ښي|thumb|300px|لېواله ستورپوهان کولای شي خپل اوزارونه پخپله جوړ کړي، دوی د ستورو د څارنو په خاطر ځانګړې مېلمستياوې او غونډې هم لمانځي چې يو له دغو نه يې سټېلافېن دی.]]
+[[انځور:Telescope trailer 22.jpg|کيڼ|thumb|300px|لېواله ستورپوهان کولای شي خپل اوزارونه پخپله جوړ کړي، دوی د ستورو د څارنو په خاطر ځانګړې مېلمستياوې او غونډې هم لمانځي چې يو له دغو نه يې سټېلافېن دی.]]
 نژدې ټول آماتوره ستورپوهان، په خپلو لاسو جوړو تلسکوپونو د اسماني اجرامو کتنه ترسره کوي. اکثراً د دوی ټولو يو عام هدف وي او هغه د سپوږمۍ، د سيارو، د ستورو، او لکۍ لرونکو ستوريو، د ستوريزو بارانونو او د تشيال په ژوره کې د نورو اسماني اجرامو لکه د ستورو واښکي، کهکشانونه او سحابيانو ليدنې دي. د آماتورې ستورپوهنې يوه څانګه تشياليزه انځورګري ده چې په دغه څانګه کې يو آماتوره ستورپوه په شپه کې د اسمان انځورونه اخلي. د دغو آماتورانو هڅې دا وي چې د اسماني اجرامو د ليدنې په وخت کې ځانګړی تبحر لاس ته راوړي او د خپلو ځاني لېوالتياو د پام ساتلو سره د خپل د ليدنې کړنې تر يو حده کارپوهنيزې کړي.<ref>{{cite web | url=http://www.amsmeteors.org/ | title = The Americal Meteor Society | accessdate = 2006-08-24 }}</ref><ref>{{cite web | first=Jerry  | last=Lodriguss | url=http://www.astropix.com/ | title = Catching the Light: Astrophotography | accessdate = 2006-08-24 }}</ref>
 
-Most amateurs work at visible wavelengths, but a small minority experiment with wavelengths outside the visible spectrum. This includes the use of infrared filters on conventional telescopes, and also the use of radio telescopes. The pioneer of amateur radio astronomy was [[Karl Guthe Jansky|Karl Jansky]] who started observing the sky at radio wavelengths in the [[1930s]]. A number of amateur astronomers use either homemade telescopes or use radio telescopes which were originally built for astronomy research but which are now available to amateurs (''e.g.'' the [[One-Mile Telescope]]).<ref>{{cite web | author=F. Ghigo | date = 2006-02-07 | url=http://www.nrao.edu/whatisra/hist_jansky.shtml | title = Karl Jansky and the Discovery of Cosmic Radio Waves | publisher = National Radio Astronomy Observatory | accessdate = 2006-08-24 }}</ref><ref>{{cite web | url=http://www.users.globalnet.co.uk/~arcus/cara/ | title = Cambridge Amateur Radio Astronomers | accessdate = 2006-08-24 }}</ref>
+ډيري آماتوران خپلې کتنې د ليدوړ څپو په مرسته ترسه کوي، خو يوه وړه ډله بيا د ليدوړ نه دباندې نورې لارې هم په کار اچوي. چې په دغو کې د ټيټ سور فلټرونه په خپلو ټلسکوپونو کې او همدا شان راډيويي ټيليسکوپونه کاروي. د اماتوره راډيويي ستورپوهنې يو مخکښ کارل جانسکي وه چې د ۱۹۳۰ لسيزې کې يې د اسمان په څارنه کې راډيويي څپې کارولې. يو ګڼ شمېر اماتوره ستورپوهان په کور کې جوړ شوو ټيليسکوپونو او يا هم د راډيويي ټيليسکوپونو نه چې د ستورپوهنيزې څېړنې لپاره جوړ شوي وي، کار اخلي او د نورو اماتوره ستورپوهانو لپاره يې هم د کارولو لپاره ږدي (د ساري په توګه يو مايلي ټيليسکوپ).<ref>{{cite web | author=F. Ghigo | date = 2006-02-07 | url=http://www.nrao.edu/whatisra/hist_jansky.shtml | title = Karl Jansky and the Discovery of Cosmic Radio Waves | publisher = National Radio Astronomy Observatory | accessdate = 2006-08-24 }}</ref><ref>{{cite web | url=http://www.users.globalnet.co.uk/~arcus/cara/ | title = Cambridge Amateur Radio Astronomers | accessdate = 2006-08-24 }}</ref>
 
 Amateur astronomers continue to make scientific contributions to the field of astronomy. Indeed, it is one of the few scientific disciplines where amateurs can still make significant contributions. Amateurs can make occultation measurements that are used to refine the orbits of minor planets. They can also discover comets, and perform regular observations of variable stars. Improvements in digital technology have allowed amateurs to make impressive advances in the field of astrophotography.
 <ref>{{cite web | url=http://www.lunar-occultations.com/iota/iotandx.htm | title = The International Occultation Timing Association  | accessdate = 2006-08-24 }}</ref><ref>{{cite web | url=http://cfa-www.harvard.edu/ep/comet/comet6.html | title = Edgar Wilson Award | publisher = Harvard-Smithsonian Center for Astrophysics | accessdate = 2006-08-24 }}</ref><ref>{{cite web | url=http://www.aavso.org/ | title = American Association of Variable Star Observers | publisher = AAVSO | accessdate = 2006-08-24 }}</ref>
