--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -284,7 +284,7 @@ Fundamental to the structure of the universe is the existence of [[dark matter]]
 
 ډيري آماتوران خپلې کتنې د ليدوړ څپو په مرسته ترسه کوي، خو يوه وړه ډله بيا د ليدوړ نه دباندې نورې لارې هم په کار اچوي. چې په دغو کې د ټيټ سور فلټرونه په خپلو ټلسکوپونو کې او همدا شان راډيويي ټيليسکوپونه کاروي. د اماتوره راډيويي ستورپوهنې يو مخکښ کارل جانسکي وه چې د ۱۹۳۰ لسيزې کې يې د اسمان په څارنه کې راډيويي څپې کارولې. يو ګڼ شمېر اماتوره ستورپوهان په کور کې جوړ شوو ټيليسکوپونو او يا هم د راډيويي ټيليسکوپونو نه چې د ستورپوهنيزې څېړنې لپاره جوړ شوي وي، کار اخلي او د نورو اماتوره ستورپوهانو لپاره يې هم د کارولو لپاره ږدي (د ساري په توګه يو مايلي ټيليسکوپ).<ref>{{cite web | author=F. Ghigo | date = 2006-02-07 | url=http://www.nrao.edu/whatisra/hist_jansky.shtml | title = Karl Jansky and the Discovery of Cosmic Radio Waves | publisher = National Radio Astronomy Observatory | accessdate = 2006-08-24 }}</ref><ref>{{cite web | url=http://www.users.globalnet.co.uk/~arcus/cara/ | title = Cambridge Amateur Radio Astronomers | accessdate = 2006-08-24 }}</ref>
 
-Amateur astronomers continue to make scientific contributions to the field of astronomy. Indeed, it is one of the few scientific disciplines where amateurs can still make significant contributions. Amateurs can make occultation measurements that are used to refine the orbits of minor planets. They can also discover comets, and perform regular observations of variable stars. Improvements in digital technology have allowed amateurs to make impressive advances in the field of astrophotography.
+اماتوره ستورپوهان د ستورپوهنې په ساينس کې جوړېدونکې ونډې لري. دا يو د هغو څانګو نه ده چې اماتوره ستورپوهان په دې څانګه کې د اهمو لاسته راوړنو لامل ګرځي. هغوی د عدسيو په کچ و مېچ کې برخه اخيستلی شي او همدا ډول کچ و مېچ په مدارونو کې د وړو سيارو په اصلاح کولو کې کارېږي. اماتوره ستورپوهان د لکۍ لرونکو ستورو کې هم يوه رغونکې ونډه لري او په ترتيب سره د متغيرو ستورو کتنې هم کوي. په ګڼيالي تخيک کې پرمختګونو اماتورو ستورپوهانو ته نورې اسانتياوې برابرې کړي او د همدغه تخيک په مرسته د ستورپوهنيزې انځورګرۍ ډګر هم پراخ شوی او ښکاره برياليتوبونه يې لاس ته راوړي.
 <ref>{{cite web | url=http://www.lunar-occultations.com/iota/iotandx.htm | title = The International Occultation Timing Association  | accessdate = 2006-08-24 }}</ref><ref>{{cite web | url=http://cfa-www.harvard.edu/ep/comet/comet6.html | title = Edgar Wilson Award | publisher = Harvard-Smithsonian Center for Astrophysics | accessdate = 2006-08-24 }}</ref><ref>{{cite web | url=http://www.aavso.org/ | title = American Association of Variable Star Observers | publisher = AAVSO | accessdate = 2006-08-24 }}</ref>
 
 ==په ستورپوهنه کې لويې پوښتنې== 
