/* دا هم وګورۍ */

--- a/پوځ.mw
+++ b/پوځ.mw
@@ -71,7 +71,7 @@ Military strength is a term that describes a [[quantification]] or reference to 
 
 ==دا هم وګورۍ==
 
-* [[د افغنستان پوځ]]
+* [[د افغانستان پوځ]]
 * [[Comparative military ranks]]
 * [[Jane's Information Group]] provides contemporary info on [[Trade]] in Military Equipment. 
 * [[Martial art]]
