*Empty MediaWiki Message*

--- a/ژونکيميا.mw
+++ b/ژونکيميا.mw
@@ -1,5 +1,5 @@
 [[انځور:biochemistry.gif|thumb|کيڼ|[[فرېدرېخ وهلر|وهلر]] د [[يوريا]] د جوړښت کتنه کوي.]]
-'''ژونکيميا''' په ژونديو اورګانيزمونو کې د کيميايي کړنو د شننو او څېړنو زده کړې ته وايي.<ref>[http://dictionary.reference.com/browse/biochemistry ډېکشنري.کام]</ref> همدا نوم د ژوند او کيميا د وييونو يو تړنګنوم دی چې ژواک د ژوند مانا لري. ژونکيميا ته په انګرېزي ژبه بايوکېمېسټري يا "biochemistry" وايي. د انګريزي ژبې همدا نوم خپل آر له يواني لغت βιοχημεία biochēmeia, چې مانا يې ده "د ژوندانه کيميا" څخه اخيستې.<ref>[http://www.kypros.org/cgi-bin/lexicon پرليکه يوناني ژباړوکی]</ref> د پوهې همدا ډګر د سلولي توکيو د جوړښت او کړنو سره سروکار لري، د ساري په توګه [[پروټين]]ونه، کاربوهايډرېټ، هشمي توکي، [[هستوي اسيد]]ونه او ډېر نور ژونماليکيولونه. د کيميايي ژونپوهنې موخه دا ده چې د ژونکيميا په ډګر کې راپورته شويو پوښتنو ته د هغه پرمختللي اوزارونو په مرسته چې په کيميايي جوړښتونو کې دي، ځواب ووايي.
+'''ژونکيميا''' په ژونديو اورګانيزمونو کې د کيميايي کړنو د شننو او څېړنو زده کړې ته وايي.<ref>[http://dictionary.reference.com/browse/biochemistry ډېکشنري.کام]</ref> همدا نوم د ژوند او کيميا د وييونو يو تړنګنوم دی. ژونکيميا ته په انګرېزي ژبه بايوکېمېسټري يا "biochemistry" وايي. د انګريزي ژبې همدا نوم خپل آر له يواني لغت βιοχημεία biochēmeia, چې مانا يې ده "د ژوندانه کيميا" څخه اخيستې.<ref>[http://www.kypros.org/cgi-bin/lexicon پرليکه يوناني ژباړوکی]</ref> د پوهې همدا ډګر د سلولي توکيو د جوړښت او کړنو سره سروکار لري، د ساري په توګه [[پروټين]]ونه، کاربوهايډرېټ، هشمي توکي، [[هستوي اسيد]]ونه او ډېر نور ژونماليکيولونه. د کيميايي ژونپوهنې موخه دا ده چې د ژونکيميا په ډګر کې راپورته شويو پوښتنو ته د هغه پرمختللي اوزارونو په مرسته چې په کيميايي جوړښتونو کې دي، ځواب ووايي.
 
 که څه هم چې داسې ګڼ شمېر ژونماليکيولونه شته، چې ډېری يې پېچلي او لوی ماليکيولونه دي ([[پوليمر]] بلل کېږي) چې د يو شان پر له پسې يوونونو څخه جوړ شوي ([[مونومر]] بلل کېږي). د ژونماليکيولونو هر پوليمريز ټولګی د يو ډول بېلابېلو يوونونو يو سيټ لري. د ساري په توګه، يو پروټين يو داسې پوليمر دی چې له ۲۰ او يا هم ډېرو [[امينو اسيد|امينو اسيدونو]] څخه جوړ شوی. ژونکيميا د اهمو ژونماليکيولونو لکه پروټينونه، په ځانګړي توګه د اينزايمونو د کټلايز شوي تعاملونو، د کيميايي ځانتياوو په اړه يوه څېړنه او د زده کړې ارت ډګر دی.
 
