*Empty MediaWiki Message*

--- a/خواړه.mw
+++ b/خواړه.mw
@@ -15,6 +15,8 @@
 انسانان د بوټو ډېرۍ برخې د خوړو په توګه کاروي. پدې کې د بوټو نژدې دوه زره بېلابېل توکمونه د خوړو لپاره کرل کېږي، او ډېری يې زمونږ د ورځنيو چارو خواړه دي چې د بېلابېلو فصلونو نه لاس ته راځي. د بوټو نه لاس ته راغلي خواړه په لانديني ټولګيو وېشل کېږي:
 [[ځڼي]]، , the ripened [[ovule]]s of some plants, carry a plant [[embryo]] inside them along with the nutrients necessary for the plant's initial growth. Because of this, seeds are often packed with energy, and are good sources of food for animals, including humans. In fact, the majority of all foods consumed by human beings are seeds. These include [[cereal]]s (such as [[maize]], [[wheat]], and [[rice]]), [[legume]]s (such as [[bean]]s, [[pea]]s, and [[lentil]]s), and [[Nut (fruit)|nut]]s. [[Oilseed]]s are often pressed to produce rich oils, including [[sunflower]], [[rapeseed|rape]] (including [[canola oil]]), and [[sesame]].<ref>''[http://books.google.com/books?id=iX05JaZXRz0C&vid=ISBN0684800012&pg=PA451&lpg=PA451&sig=lcasRT_dAcTctAePtBu5j_ybSIY ibid]'', Chapter 9: Seeds: Grains, Legumes, and Nuts.</ref>
 
+[[پياز]]
+
 [[Fruit]]s are the ripened [[ovary|ovaries]] of plants, including the seeds within. Fruits are made attractive to animals so that animals will eat the fruits and [[excretion|excrete]] the seeds over long distances. Fruits, therefore, make up a significant part of the diets of most cultures. Some fruits, such as pumpkin and eggplant, are eaten as vegetables.<ref>''[http://books.google.com/books?id=iX05JaZXRz0C&vid=ISBN0684800012&pg=PA350&lpg=350&sig=lcasRT_dAcTctAePtBu5j_ybSIY ibid]'', Chapter 7: A Survey of Common Fruits.</ref> (For more information, see [[list of fruits]].)
 
 سابه د بوټو نه لاس ته راغلي توکي دي چې د خواړو په توګه کارېږي. په سابو کې د بوټو ريښې لکه کچالو او ګازرې، د بوټو پاڼې لکه پالک او کاهو، د بوټو ډډونه لکه اسپراګس او پښۍ او په آخر کې د بوټو ګلان، لکه ګلپي او شين ګلپي يا براکولي، دا ټول سابه يادېږي. ډېرۍ مسالۍ، داروګان او خوند بسيا کوونکي توکي چې د خوند، درملنې او وږم لپاره د خواړو په ډول کارېږي، دا ټول د بوټو نه لاس ته راځي.<ref>''[http://books.google.com/books?id=iX05JaZXRz0C&vid=ISBN0684800012&pg=PA300&lpg=300&sig=lcasRT_dAcTctAePtBu5j_ybSIY ibid]'', Chapter 6: A Survey of Common Vegetables.</ref>
