/* اقليمي بدلون (د هوا د تودوخې اوږدمهاله بدلون) */

--- a/د_موسم_بدلون.mw
+++ b/د_موسم_بدلون.mw
@@ -2,13 +2,14 @@
 اقليمي بدلون (اوږد مهاله د تودوخې بدلون ) د پام وړ اوږدمهاله د هوا بدلون دی چې  په يو ځانګړي ځای کې د منځوۍ هوا ددرجې اټکل کوي ، (يا په منځمهاله(موقته) توګه په ټولنه کې د سياسي تحولاتو په اړوند د ټولې ځمکې اندښنې او اغېزې رااخلي ) دا د پام وړ بدلون په ټاکلې مودې کې راښيي.
 د اقليم بدلون د ځمکې په اټکل شوي ماحول باندې په غير نورماله توګه توپيري اغېزې پرېږدي . او همداسې راوروسته بدلونونه ېې د ځمکې په نورو برخو هم اغېزه اچوي ، لکه د سيند کنګل چې د لسيزو نه نيولې بيا تر ميلونونو کلنو پورې ېې د دوام لړۍ اټکلېدی شي.
 
-په دې نژدو کې په ځانګړې توګه د چاپېريال د پاليسۍ په چوکاټ کې د اقليمي بدلون استلاح په هوا کې د نوي بدلون په توګه کارېږي چې [نړېواله تودوخه] ېې د بېلګې په توګه وګورۍ . 
+په دې نژدو کې په ځانګړې توګه د چاپېريال د پاليسۍ په چوکاټ کې د اقليمي بدلون استلاح په هوا کې د نوي بدلون په توګه کارېږي[نړېواله تودوخه وګورۍ]. د هوا د لوړې ، ټيټې کچې د مالومولو لپاره په ډول ډول مهالونو کې او ټول درج شوي شته مالومات موجود دي، د هوا د بدلون ريکارډ وګورۍ
+ تېرومهالونو ته ورغبرګ د هوا دبدلون په اړه ، د اوسمهال ورغبرګې د هوا بدلون وګورۍ.  
+
  
 
 Climate change is any long-term significant change in the expected patterns of average weather of a specific region (or, more relevantly to contemporary socio-political concerns, of the Earth as a whole) over an appropriately significant period of time. Climate change reflects abnormal variations to the expected climate within the Earth's atmosphere and subsequent effects on other parts of the Earth, such as in the ocean's ice caps over durations ranging from decades to millions of years.
 
 In recent usage, especially in the context of environmental policy, climate change usually refers to changes in modern climate (see global warming). For information on temperature measurements over various periods, and the data sources available, see temperature record. For attribution of climate change over the past century, see attribution of recent climate change.
-
 
 == د اقليم د بدلون لاملونه ==
 
