--- a/ابن_تيميه.mw
+++ b/ابن_تيميه.mw
@@ -66,7 +66,7 @@
 #رسالة فی أمراض القلوب وشفاؤها
 
 == سرچينې ==
-
+* [http://ar.wikisource.org/wiki/%D8%A7%D8%A8%D9%86_%D8%AA%D9%8A%D9%85%D9%8A%D8%A9 ابن تیمیه]
 
 
 
