--- a/پياز.mw
+++ b/پياز.mw
@@ -1,5 +1,5 @@
 پياز د خوراك وړ يو بوټى دى چې د سابو له ډېرو مهمو او ارزښتمنو بوټو نه ګڼل كيږي . 
-د خوندورو او ګټورو سابو له شمېر نه پياز هم د بېلابېلو ناروغيو په درملنه كې او هم  د بدن د پياوړتيا لپاره ګټور دى . پياز يو داسې هېښنده بوټى دى ، چې هېڅ داسې يوه د كور مېرمن به نه وي چې له پيازو نه به په پخلي او خواړو كې كار وانخلي . پياز په سلاټو ،  ښوروا ، سوپ ، پټاټو ، قورمې ، غوښې ، پلو او نورو بېلابېلو خواړو كې كاريږي . همدا راز زموږ په ګران هېواد افغانستان كې له پيازو نه پيره كي هم پخوي چې ډېر خوندور وي . دغه خوندور او اشتها راپاروونكى بوټى هم خام او هم پوخ خوړول كيږي ، خو دويم وريانټ يې ښايي چې د ځينو خلكو خوښ نه وي . موږ انسانان د پيازو له خوراك او كارونې سره دومره روږدي شوي يو چې ډېرى وختونه مو هېر وي چې د كال په هر موسم كې داسې ارزانه او اغېزمن درمل ته لاسرسى لرو چې هر څوك يې د بېلابېلو ناروغيو سره په مبارزه كې كارولاى شي .
+د خوندورو او ګټورو سابو له شمېر نه پياز هم د بېلابېلو ناروغيو په درملنه كې او هم  د بدن د پياوړتيا لپاره ګټور دى . پياز يو داسې هېښنده بوټى دى ، چې هېڅ داسې يوه د كور مېرمن او اشپز به نه وي چې له پيازو نه به په پخلي او خواړو كې كار وانخلي . پياز په سلاټو ،  ښوروا ، سوپ ، پټاټو ، قورمې ، غوښې ، پلو او نورو بېلابېلو خواړو كې كاريږي . همدا راز زموږ په ګران هېواد افغانستان كې له پيازو نه پيره كي هم پخوي چې ډېر خوندور وي . دغه خوندور او اشتها راپاروونكى بوټى هم خام او هم پوخ خوړول كيږي ، خو دويم وريانټ يې ښايي چې د ځينو خلكو خوښ نه وي . موږ انسانان د پيازو له خوراك او كارونې سره دومره روږدي شوي يو چې ډېرى وختونه مو هېر وي چې د كال په هر موسم كې داسې ارزانه او اغېزمن درمل ته لاسرسى لرو چې هر څوك يې د بېلابېلو ناروغيو سره په مبارزه كې كارولاى شي .
  پياز د يوې درملوونكې وسيلې په توګه له ډېرو پخوا زمانو نه راهيسې كاريږي . ددغه بوټي كمپېښه ( نايابه ) روغتيايي ځانګړتياوې ان لرغونو مصريانو ته او د لرغوني روم امپراتورۍ په وختونو كې لا خلكو ته مالومې وې . پياز او د هغه كارونه څه دپاسه څلور زره كلن تاريخ لري .
 
 د پيازو لومړنى ټاټوبى افغانستان او ايران دى او وروسته ورو ورو له دغو سيمو نه نږدې هېوادو لكه هند ، چين او بيا تر يونانه پورې خپور شوى دى . داسې ويل كيږي چې په لرغونو زمانو كې د پيازو غوټې د يوه ښه دارو درمل په توګه پلورل كېدې او يا هم د خلكو ترمنځ په نورو توكو تبادله كېدې .
