*Empty MediaWiki Message*

--- a/دوتنه:امير_کروړ_سوري.jpg.mw
+++ b/دوتنه:امير_کروړ_سوري.jpg.mw
@@ -1,4 +1,4 @@
 دا د پښتو ژبې د لرغوني شاعر امير کروړ سوري يو ښايسته پورټرېټ دی. همدا رنګين انځور د قدرمن ليکوال او شاعر محمد طاهر کاڼي لخوا پښتو ويکيپېډيا ته ډالۍ شوی. چې زه د دوی د مرستې او همکارۍ نه منندوی يم.
 
 
-وېشنيزه:پښتانه شاعران
+[[وېشنيزه:پښتانه شاعران]]
