--- a/عبدالرحمان_بابا.mw
+++ b/عبدالرحمان_بابا.mw
@@ -1,6 +1,7 @@
-[[انځور:عبدالرحمان_مومند.png|thumb|200px|left| رحمن بابا، پښتو صوفي شاعر]]
-[[Image:Portrait of Rahman Baba.jpg|thumb|200px|left| رحمن بابا، پښتو صوفي شاعر]]
-[[Image:RahmanBaba.JPG|thumb|200px|عبدالرحمن مومند]]
+[[انځور:عبدالرحمان مومند بابا.jpg|thumb|200px|کيڼ| رحمن بابا، پښتو صوفي شاعر]]
+[[انځور:عبدالرحمان_مومند.png|thumb|200px|کيڼ| رحمن بابا، پښتو صوفي شاعر]]
+[[انځور:Portrait of Rahman Baba.jpg|thumb|200px|کيڼ| رحمن بابا، پښتو صوفي شاعر]]
+[[انځور:RahmanBaba.JPG|thumb|200px|عبدالرحمن مومند]]
 '''عبدالرحمان مومند''' چې د افغانستان او د پښتونخوا د بلبل په توګه يې ټول پښتانه پېژني. د پښتو ادب يو بې ساری صوفي شاعر وو. د هغه شاعري د ځانګړي سبک په لرلو سره د ټولو پښتنو د زړه څراغ بلل کېږي، دا ځکه چې په اورېدو سره يې د پښتنو زړونه روښانه کېږي. په پښتو ادب کې د عبدالرحمان بابا د شاعرۍ ونډه دغه ډګر جوت اغېزمن کړی او بډای کړی دی.
 
 == مخينه ==
