*Empty MediaWiki Message*

--- a/کشور_سلطان.mw
+++ b/کشور_سلطان.mw
@@ -1,7 +1,7 @@
 {{ژباړل}}
 
 [[انځور:KishwarSultan.PNG|thumb|289px|کشور سلطان]]
-کشور سلطان په پښتو موسيقۍ کې يو پېژندل شوی نوم دی. 
+کشور سلطان په پښتو موسيقۍ کې يو پېژندل شوی نوم دی. نوموړې د مردان يوه پښتنه ده.
 
 Kishwar Sultan has won the presidential award of the `pride of performance' but has been utterly disappointed with the indifferent attitude of the provincial government. She was skeptic about the minister for culture Dr Mahbub-ur-Rahman in particular, because it is his duty to look after the interests of the artists who serve and keep up the culture. She also mentioned with skepticism ministers Khwaja Muhammad Khan and Syed Qamar Abbas and some others. It is a matter of surprise that unlike his father Fariqh Bokhari and uncle Raza Hamdani, Syed Qamar Abbas has shrunk himself into a very small circle and does not want to see out of that.
 Majority of the people, she said, were doing the lip service by offering sweet words in her favour but none has so far done anything in practice for her. In fact, it is much harder to turn word into deed than deed into word. She said that she was considering to seek an interview with prime minister [[Benazir Bhutto]] to apprise her of her miseries.
@@ -12,8 +12,6 @@ Giving the details of her life, Kishwar Sultan said that she had sung the first 
 She recalled that prominent singers Gulnar Begum and late Ahmad Khan had also visited the radio in those days. She liked some of her most popular songs including: Gul me pa mangul day janana and Gul day da redee .. maalae rawrha .. ze pa urbal ke baye gdma. She abhors those singers who present their bodies. They don't serve the Pukhto language and its culture. She dislikes the pop music and deplored that some of the young Pukhtuns were following that style which is not compatible with their tradition and culture.
 Kishwar Sultan referred to an incident that one day she was on way to home. She was passing by two old men who were standing on the road side and heard one of them saying; "God will take her to task on the day of judgement." She felt sorry for it that some people are thinking that she has committed a sin by singing. "Such expression disturbs me very much", she said.
 
-
-*[[پښور]]
 
 [[وېشنيزه:سندرغاړي]]
 [[وېشنيزه:پښتانه]]
