robot  Adding: [[szl:Czorno Gůra]]

--- a/مانتېنېگرو.mw
+++ b/مانتېنېگرو.mw
@@ -444,6 +444,7 @@ Image:mosquepv.jpg|Husein-pasa's mosque with the tallest [[minaret]] (42m) in th
 [[sr:Црна Гора]]
 [[sv:Montenegro]]
 [[sw:Montenegro]]
+[[szl:Czorno Gůra]]
 [[ta:மொண்டெனேகுரோ]]
 [[tg:Монтенегро]]
 [[th:ประเทศมอนเตเนโกร]]
