--- a/پاکستان.mw
+++ b/پاکستان.mw
@@ -140,6 +140,7 @@
 [[gl:Paquistán - پاکستان]]
 [[gu:પાકિસ્તાન]]
 [[gv:Yn Phakistaan]]
+[[ha:Pakistan]]
 [[hak:Pâ-kî-sṳ̂-thán]]
 [[haw:Pakitana]]
 [[he:פקיסטן]]
