robot  Modifying: [[eu:Panamá]]

--- a/پاناما.mw
+++ b/پاناما.mw
@@ -220,7 +220,7 @@ for an explanation of how to generate footnotes using the <ref(erences/)> tags--
 [[eo:Panamo]]
 [[es:Panamá]]
 [[et:Panama]]
-[[eu:Panama]]
+[[eu:Panamá]]
 [[fa:پاناما]]
 [[fi:Panama]]
 [[fr:Panamá]]
