--- a/درملپوهنه.mw
+++ b/درملپوهنه.mw
@@ -1,138 +1,163 @@
-{{delete|text not in pashto}}
+[[انځور:Pharmacologyprism.jpg|thumb|کيڼ|300px|په خپله درملپوهنه کې ګڼ شمېر نور څانګې هم شته چې په دغو کې د نيورودرملپوهنه يا عصبي درملپوهنه، رېنال درملپوهنه يا کبدي درملپوهنه، انساني استقلاب يا مېټابوليزم، د سلولونو د مېنځ مېټابوليزم او د سلولونو د مېنځ نظم شامل دي.]]
 
-{{otheruses}}
+'''درملپوهنه ''' (په اروپايي ژبو pharmacology بلل کېږي او دا د [[يوناني ژبه|يوناني ژبې]] د {{lang|grc|φάρμακον}}, ''فارماکون'', "درمل"; او {{lang|grc|-λογία}}, ''[[-logy|-logia]]'' يا زده کړه يو تړنګنوم دی.) د دارو درملو د اعمالو او کړنو زده کړه ده.<ref>{{cite journal |author=Vallance P, Smart TG |title=The future of pharmacology |journal=British journal of pharmacology |volume=147 Suppl 1 |issue= |pages=S304–7 |year=2006 |month=January |pmid=16402118 |pmc=1760753 |doi=10.1038/sj.bjp.0706454 |url=}}</ref> په بله وينا دا د يوه ژوندي اورګانيزم او د جوړو شويو کيميايي درملو د خپلمنځي اغېزو يوه زده کړه ده چې په نورماله ژونکيميايي کړنې اغېزمن کوي. If substances have [[medication|medicinal]] properties, they are considered '''pharmaceuticals'''. The field encompasses [[drug]] composition and properties, [[interaction]]s, [[toxicology]], therapy, and medical applications and antipathogenic capabilities. Pharmacology is not synonymous with [[pharmacy]], which is the name used for a profession, though in common usage the two terms are confused at times. Pharmacology deals with how drugs interact within biological systems to affect function. It is the study of drugs, of the body's reaction to drugs, the sources of drugs, their nature, and their properties. In contrast, pharmacy is a medical science concerned with the safe and effective use of medicines.
 
-[[Image:Bowl hygeia.jpg|thumb|Bowl of Hygeia]]
-'''Pharmacy''' (from the [[Greek language|Greek]] ''φάρμακον'' = drug) is the [[profession]] charged with ensuring the safe use of [[medication]]. Traditionally, pharmacists have compounded and dispensed medications on the orders of physicians. More recently, pharmacy has come to include other services related to [[patient care]] including clinical practice, medication review, and drug information. Some of these new pharmaceutical roles are now mandated by law in various [[legislature]]s. [[Pharmacist]]s, therefore, are drug therapy experts, and the primary health professionals who optimize medication management to produce positive health-outcomes.
+The origins of [[clinical pharmacology]] date back to the [[Middle Ages]] in [[Avicenna]]'s ''[[The Canon of Medicine]]'', [[Peter of Spain]]'s ''Commentary on Isaac'', and John of St Amand's ''Commentary on the Antedotary of Nicholas''.<ref>D. Craig Brater and Walter J. Daly (2000), "Clinical pharmacology in the Middle Ages: Principles that presage the 21st century", ''Clinical Pharmacology & Therapeutics'' '''67''' (5), p. 447-450 [448-449].</ref> Pharmacology as a scientific discipline did not further advance until the mid-19th century amid the great biomedical resurgence of that period.<ref name=rang2006> H P Rang. (2006) The receptor concept: pharmacology's big idea. ''Br J Pharmacol.'' 147 Suppl: S9–S16.</ref>  Before the second half of the nineteenth century, the remarkable potency and specificity of the actions of drugs such as [[morphine]], [[quinine]] and [[digitalis]] were explained vaguely and with reference to extraordinary chemical powers and affinities to certain organs or tissues.<ref name=AHM2002> Andreas-Holger M., Cay-Rüdiger P. and R. F. Halliwell (2002), The emergence of the drug receptor theory. ''Nature Reviews Drug Discovery'' 1, 637-641 </ref> The first pharmacology department was set up by [[Rudolf Buchheim|Buchheim]] in 1847, in recognition of the need to understand how therapeutic drugs and poisons produced their effects.<ref name=rang2006/> 
 
-The [[symbol]]s most commonly associated with pharmacy are the [[mortar and pestle]] and the ℞ (''[[Rx|recipere]]'') character. Pharmacy organisations often employ other elements, such as the [[Bowl of Hygieia]], [[conical measure]]s, and [[caduceus]]es in their [[logos]]. Other symbols are common in different countries such as the green [[Greek cross]] in [[France]] and [[Great Britain]], and the [[Gaper]] in [[The Netherlands]].
+Early pharmacologists focused on natural substances, mainly plant extracts. Pharmacology developed in the 19th century as a biomedical science that applied the principles of scientific experimentation to therapeutic contexts.<ref name=rang>{{cite book|last=Rang|first=H.P.|title=Pharmacology|year=2007|coauthors=M.M. Dale, J.M. Ritter, R.J. Flower|publisher=[[Elsevier]]|location=[[China]]|isbn=0-443-06911-5}}</ref>
 
-==اصول==
-The field of Pharmacy can generally be divided into three main disciplines:
-*[[Pharmaceutics]]
-*[[Pharmaceutical chemistry]] (often [[Medicinal chemistry]])
-*[[Pharmacy practice]]
+==څانګې==
+Pharmacology as a chemical science is practiced by pharmacologists. Subdisciplines include 
+*''[[clinical pharmacology]]'' - the medical field of medication effects on humans
+*[[neuropharmacology|''neuro-'']] and ''[[psychopharmacology]]'' (effects of medication on behavior and nervous system functioning), 
+*''[[pharmacogenetics]]'' (clinical testing of genetic variation that gives rise to differing response to drugs)
+*''[[pharmacogenomics]]'' (application of genomic technologies to new drug discovery and further characterization of older drugs)
+*''[[pharmacoepidemiology]]'' (study of effects of drugs in large numbers of people)
+*''[[toxicology]]'' study of harmful effects of drugs
+*''theoretical pharmacology''
+*''posology'' - how medicines are dosed
+*''[[pharmacognosy]]'' - deriving medicines from plants
 
-The boundaries between these disciplines and with other sciences, such as biochemistry, are not always clear-cut; and often, collaborative teams from various disciplines research together.
+==پوهنيزه مخينه==
+The study of chemicals requires intimate knowledge of the biological system affected. With the knowledge of [[cell biology]] and [[biochemistry]] increasing, the field of pharmacology has also changed substantially. It has become possible, through molecular analysis of [[receptor (biochemistry)|receptors]], to design chemicals that act on specific cellular signaling or [[metabolic pathway]]s by affecting sites directly on cell-surface receptors (which modulate and mediate cellular signaling pathways controlling cellular function).
 
-[[Pharmacology]] is sometimes considered a fourth discipline of pharmacy. Although pharmacology is essential to the study of pharmacy, it is not specific to pharmacy. Therefore it is usually considered to be a field of the broader [[science]]s.
+A chemical has, from the pharmacological point-of-view, various properties. [[Pharmacokinetics]] describes the effect of the body on the chemical (e.g. [[half-life]] and [[volume of distribution]]), and [[pharmacodynamics]] describes the chemical's effect on the body (desired or [[toxic]]).
 
-There are various specialties of pharmacy practice. Some specialisation is based on the place of practice including: community, hospital, [[consultant pharmacist|consultant]], [[locum]], drug information, regulatory affairs, industry, and academia. Other specialisations are based on clinical roles including: nuclear, oncology, cardiovascular, infectious disease, diabetes, nutrition, geriatric, and psychiatric pharmacy.
+When describing the pharmacokinetic properties of a chemical, pharmacologists are often interested in ''[[ADME|LADME]]'':
+* [[Liberation]] - disintegration (for solid oral forms {breaking down into smaller particles}), dispersal and dissolution   
+* [[Absorption (digestive)|Absorption]] - How is the medication absorbed (through the [[skin]], the [[intestine]], the [[oral mucosa]])?
+* [[Distribution (pharmacology)|Distribution]] - How does it spread through the organism?
+* [[Drug metabolism|Metabolism]] - Is the medication converted chemically inside the body, and into which substances. Are these active? Could they be toxic?
+* [[Excretion]] - How is the medication eliminated (through the bile, urine, breath, skin)?
 
-==Pharmacists==
-:''Main article:'' [[Pharmacist]]
+Medication is said to have a narrow or wide ''[[therapeutic index]]'' or ''[[therapeutic window]]''. This describes the ratio of desired effect to toxic effect. A compound with a narrow therapeutic index (close to one) exerts its desired effect at a dose close to its toxic dose. A compound with a wide therapeutic index (greater than five) exerts its desired effect at a dose substantially below its toxic dose. Those with a narrow margin are more difficult to dose and administer, and may require [[therapeutic drug monitoring]] (examples are [[warfarin]], some [[antiepileptic]]s, [[aminoglycoside]] [[antibiotics]]). Most anti-[[cancer]] drugs have a narrow therapeutic margin: toxic side-effects are almost always encountered at doses used to kill [[tumor]]s.
 
-[[Pharmacist]]s are highly-trained and skilled healthcare professionals who perform various roles to ensure optimal health outcomes for their patients. Many pharmacists are also [[small business|small-business]] owners, owning the pharmacy in which they practice. This unique [[dichotomy]] is often the subject of debate within the profession—in part due to the perception of pharmacists as "common shopkeepers" by many in the community.
+==د داروګانو پرمختګ او حفاظتي آزمېښتونه==
+[[Drug development|Development of medication]] is a vital concern to [[medicine]], but also has strong [[economical]] and [[political]] implications. To protect the [[consumer]] and prevent abuse, many governments regulate the manufacture, sale, and administration of medication. In the [[United States]], the main body that regulates pharmaceuticals is the [[Food and Drug Administration]] and they enforce [[standards]] set by the [[United States Pharmacopoeia]]. In the [[European Union]], the main [[body]] that regulates pharmaceuticals is the [[EMEA]] and they enforce standards set by the [[European Pharmacopoeia]].
 
-Pharmacists are represented internationally by the [[International Pharmaceutical Federation]] (FIP). They are represented at the national level by professional organisations such as the [[Royal Pharmaceutical Society of Great Britain]] (RPSGB), the [[Pharmaceutical Society of Australia]] (PSA) and [[American Pharmacists Association]] (APhA).
-In some cases, the representative body is also the registering body, which is responsible for the [[ethics]] of the profession. Since the [http://www.the-shipman-inquiry.org.uk Shipman Inquiry], there has been a move in the [[United Kingdom|UK]] to separate the two roles.
+If the chemical structure of a medicinal compound is altered slightly, this could slightly or dramatically alter the medicinal properties of the compound depending on the level of alteration as it relates to the structural composition of the substrate or receptorsite on which it exerts its medicinal effect, a concept referred to as the structural activity relationship (SAR) . This means when a useful activity has been identified, chemists will make many similar compounds called analogues, in an attempt to maximize the desired medicinal effect(s) of the compound. This development phase can take anywhere from a few years to a decade or more and is very expensive.<ref name="ReviseALChem">{{cite book|last=Newton|first=David|coauthors=Alasdair Thorpe, Chris Otter|title=Revise A2 Chemistry|publisher=[[Heinemann Educational Publishers]]|date=2004|pages=1|month=|isbn =0-435-58347-6}}</ref>
 
-==Separation of prescribing from dispensing==
-In most jurisdictions (such as the [[United States]]), [[pharmacist]]s are regulated separately from [[physician]]s. Specifically, the legislation stipulates that the practice of prescribing must be separate from the practice of dispensing. These jurisdictions also usually specify that ''only'' pharmacists may supply scheduled [[pharmaceutical]]s to the public, and that pharmacists cannot form business [[partnership]]s with physicians or give them "kickback" payments.
+These new analogues need to be developed. It needs to be determined how safe the medicine is for human consumption, its stability in the human body and the best form for delivery to the desired organ system, like tablet or aerosol. After extensive testing, which can take up to 6 years the new medicine is ready for marketing and selling.<ref name="ReviseALChem"/>
 
-In the minority of [[jurisdiction]]s (particularly in [[Asian]] such as [[China]], [[Malaysia]] and [[Singapore]]), [[Physician|doctor]]s are allowed to dispense [[medication|drug]]s themselves and the [[practice]] of pharmacy is integrated with that of the [[physician]].
+As a result of the long time required to develop analogues and test a new medicine and the fact that of every 5000 potential new medicines typically only one will ever reach the open market, this is an expensive way of doing things, costing millions of dollars. To recoup this outlay pharmaceutical companies may do a number of things:<ref name="ReviseALChem"/>
+* Carefully research the demand for their potential new product before spending an outlay of company funds.<ref name="ReviseALChem"/>
+* Obtain a patent on the new medicine preventing other companies from producing that medicine for a certain allocation of time.<ref name="ReviseALChem"/>
 
-The reason for the majority rule is the high risk of a conflict of interest. Otherwise, the physician has a financial self-interest in "diagnosing" as many conditions as possible, and in exaggerating their seriousness, because he or she can then sell more medications to the patient. Such self-interest directly conflicts with the patient's interest in obtaining cost-effective medication and avoiding the unnecessary use of medication that may have [[side-effects]].
+==د داروګانو قانوني کول او تحفظ==
+In the [[United States]], the [[Food and Drug Administration]] (FDA) is responsible for creating guidelines for the approval and use of drugs. The FDA requires that all approved drugs fulfill two requirements:
+# The drug must be found to be effective against the disease for which it is seeking approval.
+# The drug must meet safety criteria by being subject to extensive animal and controlled human testing.
 
-A campaign for separation has begun in many countries and has already been successful (like in [[Korea]]). As many of the remaining nations move towards separation, resistance and lobbying from dispensing doctors who have percuniary interests may prove a major stumbling block (e.g. in [[Malaysia]]).
+Gaining FDA approval usually takes several years to attain. Testing done on animals must be extensive and must include several species to help in the evaluation of both the effectiveness and toxicity of the drug. The dosage of any drug approved for use is intended to fall within a range in which the drug produces a [[therapeutic effect]] or desired outcome.<ref name=nagle>{{cite book|last=Nagle|first=Hinter|title=Pharmacology: An Introduction|year=2005|coauthors=Barbara Nagle|publisher=[[McGraw Hill]]|location=[[Boston]]|isbn=0-07-312275-0}}</ref>
 
-==Community Pharmacy==
-A '''pharmacy''' (commonly the '''chemist''' in [[Australia]], [[New Zealand]] and the [[United Kingdom|UK]]; or '''drugstore''' in [[North America]]; or [[Apothecary]], historically) is the place where most pharmacists practice the profession of pharmacy. It is the community pharmacy where the dichotomy of the profession exists&mdash;health professionals who are also retailers.
+The safety and effectiveness of prescription drugs in the U.S. is regulated by the federal [[Prescription Drug Marketing Act (PDMA)|Prescription Drug Marketing Act of 1987]].
 
-Community pharmacies usually consist of a retail storefront with a dispensary where medications are stored and dispensed. The dispensary is subject to pharmacy legislation; with requirements for storage conditions, compulsory texts, equipment, ''etc.'', specified in legislation. Where it was once the case that pharmacists stayed within the dispensary compounding/dispensing medications; there has been an increasing trend towards the use of trained [[pharmacy technician]]s while the pharmacist spends more time communicating with patients.
+The [[Medicines and Healthcare products Regulatory Agency]] (MHRA) has a similar role in the UK.
 
-All pharmacies are required to have a pharmacist on-duty at all times when open. In many jurisdictions, it is also a requirement that the owner of a pharmacy must be a registered pharmacist (R.Ph.). This latter requirement has been revoked in many jurisdictions, such that many [[retailer]]s (including [[grocery store]]s and [[mass merchandiser]]s) now include a pharmacy as department of their store.
+==زده کړه==
+The study of pharmacology is offered in many universities worldwide.<br />
+Again, pharmacology education programs differ from pharmacy programs. Students of pharmacology are trained as researchers, studying the effects of substances in order to better understand the mechanisms which might lead to new drug discoveries for example. Whereas a pharmacy student will eventually work in a pharmacy dispensing medications or some other position focused on the patient, pharmacologist will typically work within a laboratory setting.
 
-==Hospital Pharmacy==
-Pharmacies within [[hospitals]] differ considerably from community pharmacies. Some pharmacists in hospital pharmacies may have more complex clinical medication management issues whereas pharmacists in community pharmacies often have more complex business and customer relations issues. 
+Some higher educational institutions combine pharmacology and toxicology into a single program as does
+[[Michigan State University]]. Michigan State University offers PhD training in Pharmacology & Toxicology with an optional Environmental Toxicology specialization. They also offer a [[Professional Science Masters]] in Integrative Pharmacology.
 
-Unlike community pharmacies, which are usually independently owned, hospital pharmacies can usually be found within the premises of the hospital. Hospital pharmacies usually stock a larger range of medications, including more specialized medications, than would be feasible in the community setting. Traditionally, hospital pharmacies have also prepared various injectable preparations, such as saline, [[total parenteral nutrition]] (TPN), and other drug infusions; but there has been a trend to [[outsource]] these functions to specialised pharmaceutical companies.
+== دا هم وګورۍ ==
+{{Col-begin}}
+{{Col-1-of-3}}
+* [[Certain safety factor]]
+* [[Cosmeceuticals]] 
+* [[Crude drugs]]
+* [[Drug design]]
+* [[Drug Discovery Hit to Lead]]
+* [[Enzyme inhibitor]]s
+* [[Galenic formulation]]
+* [[Herbalism]]
+* [[International Union of Basic and Clinical Pharmacology]]
+* [[List of abbreviations used in medical prescriptions]]
+* [[List of withdrawn drugs]]
+{{Col-2-of-3}}
+* [[Medicare Part D]] - the new prescription drug plan in the U.S.
+* [[Medication]]
+* [[Medicinal chemistry]]
+* [[Neuropharmacology]] - The Molecular and Behavior study of Disease and Drugs in the Nervous System
+* [[Neuropsychopharmacology]] - The detailed comprehensive study of mind, brain and drugs.
+* [[Nicholas Culpeper]] - 17th century English Physician who translated and used 'pharmacological texts'.
+* [[Pharmaceutical company]]
+{{Col-3-of-3}}
+{{Portal|Pharmacy and Pharmacology|Pharmaklog.png}}
+* [[Pharmacognosy]]
+* [[Pharmacopoeia]]
+* [[Pharmacotherapy]]
+* [[Pharmakos]]
+* [[Placebo (origins of technical term)]]
+* [[Prescription drug]]
+* [[Prescription Drug Marketing Act (PDMA)]]
+* [[Psychopharmacology]] - medication for mental conditions
+* [[Traditional Chinese Medicine]]
 
-==Internet Pharmacy==
-Recently, a number of pharmacies have begun operating over the [[internet]]. Many such pharmacies are, in some ways, similar to community pharmacies; the primary difference is the method by which the medications are requested and received. Some customers consider this to be more convenient than traveling to a community drugstore.
+{{col-end}}
 
-Some internet pharmacies sell prescription drugs without requiring a prescription. Some customers order drugs from such pharmacies to avoid the "inconvenience" of visiting a doctor or to obtain medications which their doctors were unwilling to prescribe. However, this practice has been criticized as potentially dangerous, especially by those who feel that only doctors can reliably assess contraindications, risk/benefit ratios, and an individual's overall suitability for use of a medication. There have also been reports of such pharmacies dispensing substandard products.
+==پايڅوړ==
+{{reflist}}
 
-In the [[United States]], there has been a push to legalize importation of medications from [[Canada]] and other countries, in order to reduce consumer costs. Although importation of prescription medication currently violates [[FDA]] regulations and federal laws, enforcement is generally targeted at international drug suppliers, rather than consumers.
+==باندنۍ تړنې==
+* [http://www.pharmaceutical-business-review.com Pharmaceutical Business Review].
+* [http://www.nndb.com/lists/623/000098329/ Pharmaceutical company profiles at NNDB].
+* [http://www.ich.org/ International Conference on Harmonisation].
+* [http://www.usp.org US Pharmacopeia].
+* [http://www.medpharm.blogspot.com/ Medicine updates].
+* [http://www.iuphar.org International Union of Basic and Clinical Pharmacology].
+* [http://www.iuphar-db.org IUPHAR Committee on Receptor Nomenclature and Drug Classification].
 
-==The future of pharmacy==
-In the coming decades, pharmacists are expected to become more integral within the health care system. Rather than simply dispensing medication, pharmacists will be paid for their cognitive skills. This paradigm shift has already commenced in some countries; for instance, pharmacists in [[Australia]] receive remuneration from the [[Government of Australia|Australian Government]] for conducting comprehensive Home Medicines Reviews. Many universities are altering their programs to increase emphasis in fields such as pharmacotherapeutics, clinical pharmacy, nuclear pharmacy, disease state management, etc. In Great Britain, pharmacists (and nurses) who undertake additional training are obtaining prescribing rights.
-
-==See also==
-*[[List of pharmacies]]
-
-==External links==
-===Professional Organisations===
-*International/Multinational
-**[http://www.fip.org International Pharmaceutical Federation (FIP)]
-**[http://www.eahponline.org European Association of Hospital Pharmacists (EAHP)]
-**[http://www.escpweb.org/site/cms/ European Society of Clinical Pharmacy (ESCP)]
-*[[Australia]]
-**[http://www.psa.org.au Pharmaceutical Society of Australia (PSA)]
-**[http://www.guild.org.au Pharmacy Guild of Australia (PGA)]
-**[http://www.shpa.org.au Society of Hospital Pharmacists of Australia (SHPA)]
-*[[Canada]]
-**[http://www.pharmacists.ca Canadian Pharmacists Association (CPA)]
-*[[Great Britain]]
-**[http://www.rpsgb.org.uk Royal Pharmaceutical Society of Great Britain (RPSGB)]
-*[[Malaysia]]
-**[http://www.mps.org.my Malaysian Pharmaceutical Society (MPS)]
-*[[New Zealand]]
-**[http://www.psnz.org.nz Pharmaceutical Society of New Zealand (PSNZ)]
-*[[Singapore]]
-**[http://www.pss.org.sg Pharmaceutical Society of Singapore (PSS)]
-*[[United States]]
-**[http://www.aphanet.org American Pharmacists Association (APhA)]
-**[http://www.ashp.org American Society of Health-System Pharmacists (ASHP)]
-**[http://www.ascp.com American Society of Consultant Pharmacists (ASCP)]
-**[http://www.asmso.org American Society of Medication Safety Officers (ASMSO)]
-
-===Regulatory===
-*[http://www.nabp.net National Association of Boards of Pharmacy]
-*[http://www.pbnsw.org.au Pharmacy Board of New South Wales]
-*[http://www.pharmacybd.vic.gov.au Pharmacy Board of Victoria (Australia)]
-*[http://www.pharmacycouncil.org.nz/index.asp Pharmacy Council of New Zealand]
-
-===History and traditions===
-*[http://www.ubka.uni-karlsruhe.de/pharm/pharmaziegeschichte/index-e.html Navigator History of Pharmacy] Collection of internet ressources related to the history of pharmacy.
-*[http://www.rpsgb.org.uk/members/museum/mussheet.htm RPSGB Museum Information Sheets] Illustrated information sheets on objects in the history of pharmacy.
-*[http://home.swipnet.se/PharmHist/Lankar/lankar_en.html History of Pharmacy Web Pages] Perbo´s History of Pharmacy Web Pages.
-
-===Other===
-*[http://www.pharmweb.net Pharmweb.Net] Portal site for pharmacists and healthcare professionals.
-*[http://www.pharmacist.com Pharmacist.com] Portal site for pharmacists and pharmacy students.
-*[http://www.pharmacy.org/ The Virtual Library of Pharmacy] Extensive index of pharmacy-related resources, including information on careers in pharmacy, pharmacy schools, pharmaceuticaul companies, associations and conferences.
-*[http://www.affordable-prescriptions.md/news/index.html Pharmacy News] Pharmacy news and news in the pharmaceutical industry
-*[http://www.biochemweb.org/chemical.shtml Chemical Biology - The Virtual Library of Biochemistry and Cell Biology] Resource devoted to drug discovery and chemical and pharmacological approaches to biology, biomedicine and biotechnology.
-*[http://www.anf.pt/site/index.php?page=data/anf/museu_farmacia.php/ Museu da Farmácia], [[Lisboa]](Pharmacy Museum)
-*[http://www.auspharm.net.au auspharm.net.au] the portal for pharmacists practising in Australia, providing useful links, a discussion list, and feature articles
-
+{{Pharmacology}}
 {{BranchesofChemistry}}
+{{Technology-footer}}
 
-[[Category:Pharmacy|*]]
+[[Category:Pharmacology| ]]
 [[Category:Biochemistry]]
 
-[[ar:صيدلة]]
-[[ca:Farmàcia]]
-[[da:Apotek]]
-[[de:Apotheke]]
-[[en:Pharmacy]]
-[[es:Farmacia]]
-[[eo:Apoteko]]
-[[fr:Pharmacie]]
-[[ia:Pharmacia]]
-[[hu:Gyógyszerészet]]
-[[lt:Farmacinė veikla]]
-[[ja:薬学]]
-[[ko:약학]]
-[[nds:Aftheiken]]
-[[nl:Apotheek]]
-[[no:Apotek]]
-[[pl:Farmacja]]
-[[pt:Farmácia]]
-[[ru:Фармация]]
-[[sl:Farmacija]]
-[[su:Farmasi]]
-[[sv:Apotek]]
-[[th:เภสัชกรรม]]
-[[zh:药学]]
+[[ar:علم الأدوية]]
+[[bn:ফার্মাকোলজি]]
+[[bs:Farmakologija]]
+[[bg:Фармакология]]
+[[ca:Farmacologia]]
+[[cs:Farmakologie]]
+[[da:Farmakologi]]
+[[de:Pharmakologie]]
+[[et:Farmakoloogia]]
+[[el:Φαρμακολογία]]
+[[es:Farmacología]]
+[[eo:Farmakologio]]
+[[eu:Farmakologia]]
+[[fa:داروشناسی]]
+[[fr:Pharmacologie]]
+[[hr:Farmakologija]]
+[[id:Farmakologi]]
+[[is:Lyfjafræði]]
+[[it:Farmacologia]]
+[[he:פרמקולוגיה]]
+[[lt:Farmakologija]]
+[[hu:Gyógyszerhatástan]]
+[[ms:Farmakologi]]
+[[my:ဆေးဝါးဗေဒ]]
+[[nl:Farmacologie]]
+[[ja:薬理学]]
+[[no:Farmakologi]]
+[[oc:Farmacologia]]
+[[pl:Farmakologia]]
+[[pt:Farmacologia]]
+[[ro:Farmacologie]]
+[[ru:Фармакология]]
+[[sq:Farmakologjia]]
+[[sk:Farmakológia]]
+[[sl:Farmakologija]]
+[[sr:Фармакологија]]
+[[su:Farmakologi]]
+[[fi:Farmakologia]]
+[[sv:Farmakologi]]
+[[tl:Parmakolohiya]]
+[[th:เภสัชวิทยา]]
+[[vi:Dược lý học]]
+[[tr:Farmakoloji]]
+[[uk:Фармакологія]]
+[[zh:药理学]]
