--- a/آنګولا.mw
+++ b/آنګولا.mw
@@ -12,7 +12,7 @@ national_motto           = none |
 latd=8|latm=50|latNS=S|longd=13|longm=20|longEW=E|
 د حکومت بڼه          = [[Multi-party]] [[democracy]] |
 د لارښود لقب            = [[President of Angola|Head of State]] <br> [[Prime Minister of Angola|Head of Government]]|
-د لارښود نوم             = [[José Eduardo dos Santos]] <br> [[Fernando da Piedade Dias dos Santos|Fernando da Piedade <br> Dias dos Santos]]|
+د لارښود نوم             = [[José Eduardo dos Santos]] <br> [[Paulo Kassoma]]|
 لوی ښار             = [[Luanda]] |
 مساحت                     = 1,246,700 |
 area_rank                = 22nd |
