robot  Adding: [[ha:Asturaliya]]

--- a/اسټرالیا.mw
+++ b/اسټرالیا.mw
@@ -243,6 +243,7 @@ Televised sport is popular; some of the highest rating television programs inclu
 [[gl:Australia]]
 [[gu:ઑસ્ટ્રેલિયા]]
 [[gv:Yn Austrail]]
+[[ha:Asturaliya]]
 [[hak:O-thai-li-â]]
 [[haw:‘Aukekulelia]]
 [[he:אוסטרליה]]
