--- a/پاړسي_ژبه.mw
+++ b/پاړسي_ژبه.mw
@@ -143,7 +143,7 @@ The "'''International Persian Alphabet'''" ([[IPA2]])[http://www.persiandirect.c
 The Persian language has six vowels and twenty-three consonants, including two affricates {{IPA|/ʧ/}} (ch) and {{IPA|/ʤ/}} (j).
 Historically, Persian distinguished length: the long vowels {{IPA|/i:/}}, {{IPA|/u:/}}, {{IPA|/ɑ:/}} contrasting with the short vowels {{IPA|/e/}}, {{IPA|/o/}}, {{IPA|/æ/}} respectively. Modern spoken Persian, however, generally does not make this distinction anymore.
 
-[[Image:Farsi vowel chart.png|left|The vowel phonemes of Persian]]
+[[Image:Farsi vowel chart.svg|left|300px|The vowel phonemes of Persian]]
 
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
