--- a/اتريش.mw
+++ b/اتريش.mw
@@ -406,6 +406,7 @@ Although Austrians can look back with pride on their cultural past, current Aust
 [[th:ประเทศออสเตรีย]]
 [[tk:Awstriýa]]
 [[tl:Austria]]
+[[tpi:Ostria]]
 [[tr:Avusturya]]
 [[udm:Австрия]]
 [[ug:ئاۋستىرىيە]]
