*Empty MediaWiki Message*

--- a/کلتوري_خبريالي.mw
+++ b/کلتوري_خبريالي.mw
@@ -1,3 +1,5 @@
 '''کولتوري ژورنالېزم'''''''''
 
 هغه ژورنالېزم ته وایي چې د یوه ملک کلتوري اړخونه تر څېړنې لاندې نیسي  او موخه یې د کلتور پرمختګ او خپراوی دی . دغه ډول ژورنالېزم خپلې لیکنې د کره کتنې، پارترې او څېړنو په وسیله خلکو ته رسوي .
+
+م۔ک۔ نور
