robot  Adding: [[jv:Salman Khan]]

--- a/سلمان_خان.mw
+++ b/سلمان_خان.mw
@@ -464,6 +464,7 @@ In 2005, news outlets released what was said to be an illicit copy of a mobile p
 [[hi:सलमान ख़ान]]
 [[hu:Salman Khan]]
 [[it:Salman Khan]]
+[[jv:Salman Khan]]
 [[ml:സല്‍മാന്‍ ഖാന്‍]]
 [[mr:सलमान खान]]
 [[pl:Salman Khan]]
