--- a/احمد_حسين_عنايت_محسن.mw
+++ b/احمد_حسين_عنايت_محسن.mw
@@ -23,33 +23,27 @@
 ما سره د ټيليفوني اړيکو لپاره لانديني نمبرونه کارولای شۍ (0044 - 7727277402) او (0044 - 2085864851)
 برياليتوب مو له لوي خداي څخه غواړم
 
+== د شعر بېلګه ==
 
-
-دشعر نموني مې په لا ندې ډول دي :
-
-
-    
-
-[[== دعا ==]]
-
+دعا 
 
 پـيـلامه مي ستـا په نـوم ده، انتهـا مــې پــه نصيب کــړه  
-      ستـا د مـينـی لاروى يـم، خـپل مـنـزل تـه مـې قـريـب کـړه  
+ستـا د مـينـی لاروى يـم، خـپل مـنـزل تـه مـې قـريـب کـړه  
 پـه تـعـجـب را تـه حيران، چـې عـاشــقـان د زمــانـې شــي  
-       پـه ټـولي د عـاشـقانــو کــې مــې، نـور هـم لا عجـيب کړه  
+پـه ټـولي د عـاشـقانــو کــې مــې، نـور هـم لا عجـيب کړه  
 د دردونـو تـاب مــی نشـته، چـی ناروغ می ټول بدن دی  
-       ټـــولنـيز بـدن مـی جـوړ کــړه، خپل کلام را ته طبيـب کړه  
+ټـــولنـيز بـدن مـی جـوړ کــړه، خپل کلام را ته طبيـب کړه  
 زه د نـفس هوا، هــــوا کـړم، د منـزل څـرک را نه ورک دی  
-      ګډوډۍ نه می نور بچ کړه، د ژوند چـارې می ترتيب کړه  
+ګډوډۍ نه می نور بچ کړه، د ژوند چـارې می ترتيب کړه  
 حقـيقي علـم چی زده کـړم، شــيـطـانـي ځنـې مــې ســاتــه  
-      بنی آدم ژوند ئی دوزخ کـړ، د ابـليس ځـاله تـخريـب کړه  
+بنی آدم ژوند ئی دوزخ کـړ، د ابـليس ځـاله تـخريـب کړه  
 څـــــه نـــادودې چـــې روانـې، پـــه مــلـت د ابــراهــيـم دي  
-      حـق تـه ئـی مـخه کړه محـبوبـه، پيروان ئي د حـبـيب کړه  
+حـق تـه ئـی مـخه کړه محـبوبـه، پيروان ئي د حـبـيب کړه  
 کـــه خـنـدا کـه خـوشـحـالـي ده، شـوه نـصيب د رقـيـبانو  
-             زه ستا مينه کی خوشحال يم، لار مې چپه له رقيب کړه  
+زه ستا مينه کی خوشحال يم، لار مې چپه له رقيب کړه  
 
 زه (محسن ) در ته زاري کـړم، ارمانونه مې پوره کړه	  
-      در مې بل د حــــاجت نيشته، اميدونه مې تصويب کړه
+در مې بل د حــــاجت نيشته، اميدونه مې تصويب کړه
 
 == '''[[اختره]]''' ==
 
